--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hero_button: ^1.0.4
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.6
+  swipe_cards: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
