--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^4.0.4
   flutter_svg: ^1.1.6
   swipe_cards: ^2.0.0+1
+  chat_bubbles: ^1.4.1
 
 dev_dependencies:
   flutter_test:
