--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^1.1.6
   swipe_cards: ^2.0.0+1
   chat_bubbles: ^1.4.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
