Продолжается работа над бэком
Работают сообщения и страница со слайдером, так-же есть история сообщений

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   swipe_cards: ^2.0.0+1
   chat_bubbles: ^1.4.1
   intl: ^0.18.1
+  progress_indicators: ^1.0.0
 
 dev_dependencies:
   flutter_test:
